# vs-code-cpp-template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE.md  README.md
.devcontainer/: Dockerfile  devcontainer.json
app/: CMakeLists.txt
cmake/: Version.cmake  Windows.cmake
lib/: CMakeLists.txt
lib/src/: project.cpp
test/: CMakeLists.txt
